added codes for navbar and self section

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <!-- the 'viewport' for desktop, tablet, and phone view vision -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <title>My Resume</title>
-
+  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
   <!--[if lt IE 9]>
@@ -14,7 +16,38 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <!--nav bars part-->
+  <header>
+    <div class="my-resume">
+      <h1>My Resume</h1>
+    </div><!--close for "my-resume"-->
+    <nav class="navbar">
+      <div class="links">
+        <a id="home" href="#">Home</a>
+        <a id="skill" href="#">Skills</a>
+        <a id="work-history" href="#">Work History</a>
+      </div><!--close for "links"-->
+    </nav><!--close for "navbar-->
+  </header>
+
+  <!--middle1 part-->
+<section class="self">
+  <div class="self-image">
+    <img class="image" src="nikki-redwood.jpg" alt="Nikki photo in Redwwod">
+  </div> <!--close for "self-image"-->
+  <div class="self-intro">
+    <h2 class="name">Xue Ying(Nikki) Lin</h2>
+  </div> <!--"selg-intro" close-->
+  <div class="slogan">
+    <p>Passsion & Driven</p>
+  </div> <!--"slogan" close-->
+  <div class="tech">
+    <p>Technology brings the world together.</p>
+    <p>Nothing impossible & Time is matter.</p>
+  </div> <!--"tech" close-->  
+  </div> <!--"slogan" close-->
+</section> <!--close for "self"-->
+
+
 </body>
 </html>
-testing
