index.html first temp done

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
       <div class="links">
         <a id="home" href="#">Home</a>
         <a id="skill" href="#">Skills</a>
+        <a id="projects" href="">Projects</a>
         <a id="work-history" href="#">Work History</a>
+        <a id="contact" href="">Contact</a>
       </div><!--close for "links"-->
     </nav><!--close for "navbar-->
   </header>
@@ -48,6 +50,47 @@
   </div> <!--"slogan" close-->
 </section> <!--close for "self"-->
 
+<!--link elements -->
+<section class="elements">
+  <div class="link-elements">
+    
+    <div class="skill-element">
+      <h4>Skills</h4>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>PHP</li>
+        <li>Java</li>
+        <li>C</li>
+      </ul><!--close ul-->
+    </div> <!--close "skill-element"-->
+
+    <div class="project">
+      <h2>Projects</h2>
+      <p>Please press the project's name to view codes.</p>
+      <ul>
+        <li><a href="XueYinglin.github.io">XueYinglin.github.io</a></li>
+        <li><a href="https://github.com/XueYingLin/responsive-web-design-I">Responsive-web-design-I</a></li>
+        <li><a href="https://github.com/XueYingLin/Nikki-wepage">Nikki-wepage</a></li>
+        <li><a href="https://github.com/XueYingLin/Sprint-Challenge--User-Interface">Sprint-Challenge--User-Interface</a></li>
+        <li><a href="https://github.com/XueYingLin/UI-III-Flexbox">UI-III-Flexbox</a></li>
+        <li><a href="https://github.com/XueYingLin/sweetEatsBakery">sweetEatsBakery</a></li>
+        <li><a href="https://github.com/XueYingLin/User-Interface">User-Interface</a></li>
+    </ul>
+    </div> <!--close "project"-->
+
+    <!-- Contact part not done yet -->
+    <div class="contact">
+      <h2>Contact</h2>
+      <p>phone #: (415)265-7978</p>
+      <p>Email: nikkiylin@gmail.com</p>
+      <p>github: https://github.com/XueYingLin</p>
+
+    </div> <!--close "contact"-->
+
+  </div> <!--close "link-elements" section-->
+</section> <!--close "elements"-->
 
 </body>
 </html>
