--- a/index.html
+++ b/index.html
@@ -21,21 +21,19 @@
     <div class="my-resume">
       <h1>My Resume</h1>
     </div><!--close for "my-resume"-->
-    <nav class="navbar">
-      <div class="links">
+    <div class="links">
         <a id="home" href="#">Home</a>
         <a id="skill" href="#">Skills</a>
         <a id="projects" href="">Projects</a>
         <a id="work-history" href="#">Work History</a>
         <a id="contact" href="">Contact</a>
-      </div><!--close for "links"-->
-    </nav><!--close for "navbar-->
+    </div><!--close for "links"-->
   </header>
 
   <!--middle1 part-->
 <section class="self">
   <div class="self-image">
-    <img class="image" src="nikki-redwood.jpg" alt="Nikki photo in Redwwod">
+    <img class="image" src="images/nikki-redwood.jpg" alt="Nikki photo in Redwwod">
   </div> <!--close for "self-image"-->
   <div class="self-intro">
     <h2 class="name">Xue Ying(Nikki) Lin</h2>
@@ -92,5 +90,8 @@
   </div> <!--close "link-elements" section-->
 </section> <!--close "elements"-->
 
+  <footer>
+    <p>Copyright 2020</p>
+  </footer>
 </body>
 </html>
