added codes for skills and projects

--- a/index.html
+++ b/index.html
@@ -31,66 +31,54 @@
   </header>
 
   <!--middle1 part-->
-<section class="self">
-  <div class="self-image">
+<div class="self">
     <img class="image" src="images/nikki-redwood.jpg" alt="Nikki photo in Redwwod">
-  </div> <!--close for "self-image"-->
-  <div class="self-intro">
-    <h2 class="name">Xue Ying(Nikki) Lin</h2>
-  </div> <!--"selg-intro" close-->
-  <div class="slogan">
-    <p>Passsion & Driven</p>
-  </div> <!--"slogan" close-->
-  <div class="tech">
-    <p>Technology brings the world together.</p>
-    <p>Nothing impossible & Time is matter.</p>
-  </div> <!--"tech" close-->  
-  </div> <!--"slogan" close-->
-</section> <!--close for "self"-->
+    <div class="about-me">
+      <h2 class="name">Xue Ying(Nikki) Lin</h2>
+      <p>Passion & Driven</p>
+      <p>Technology brings the world together.</p>
+      <p>Nothing is impossible & Time is matter.</p>
+    </div><!--close for "about-me"-->
+</div> <!--close for "self"-->
 
 <!--link elements -->
-<section class="elements">
-  <div class="link-elements">
-    
-    <div class="skill-element">
-      <h4>Skills</h4>
-      <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>PHP</li>
-        <li>Java</li>
-        <li>C</li>
-      </ul><!--close ul-->
-    </div> <!--close "skill-element"-->
 
-    <div class="project">
-      <h2>Projects</h2>
-      <p>Please press the project's name to view codes.</p>
-      <ul>
-        <li><a href="XueYinglin.github.io">XueYinglin.github.io</a></li>
-        <li><a href="https://github.com/XueYingLin/responsive-web-design-I">Responsive-web-design-I</a></li>
-        <li><a href="https://github.com/XueYingLin/Nikki-wepage">Nikki-wepage</a></li>
-        <li><a href="https://github.com/XueYingLin/Sprint-Challenge--User-Interface">Sprint-Challenge--User-Interface</a></li>
-        <li><a href="https://github.com/XueYingLin/UI-III-Flexbox">UI-III-Flexbox</a></li>
-        <li><a href="https://github.com/XueYingLin/sweetEatsBakery">sweetEatsBakery</a></li>
-        <li><a href="https://github.com/XueYingLin/User-Interface">User-Interface</a></li>
-    </ul>
-    </div> <!--close "project"-->
+<div class="link-elements">
+  <h4>Skills</h4>
+  <ul>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+    <li>PHP</li>
+    <li>Java</li>
+    <li>C</li>
+  </ul><!--close ul-->
+</div> <!--close "link-elements" section-->
+
+<div class="projects">
+  <h2>Projects</h2>
+  <p>Please press the project's name to view codes.</p>
+  <ul>
+    <li><a href="https://XueYinglin.github.io">XueYinglin.github.io</a></li>
+    <li><a href="https://github.com/XueYingLin/responsive-web-design-I">Responsive-web-design-I</a></li>
+    <li><a href="https://github.com/XueYingLin/Nikki-wepage">Nikki-wepage</a></li>
+    <li><a href="https://github.com/XueYingLin/Sprint-Challenge--User-Interface">Sprint-Challenge--User-Interface</a></li>
+    <li><a href="https://github.com/XueYingLin/UI-III-Flexbox">UI-III-Flexbox</a></li>
+    <li><a href="https://github.com/XueYingLin/sweetEatsBakery">sweetEatsBakery</a></li>
+    <li><a href="https://github.com/XueYingLin/User-Interface">User-Interface</a></li>
+  </ul>
+</div> <!--close "project"-->
 
     <!-- Contact part not done yet -->
-    <div class="contact">
-      <h2>Contact</h2>
-      <p>phone #: (415)265-7978</p>
-      <p>Email: nikkiylin@gmail.com</p>
-      <p>github: https://github.com/XueYingLin</p>
+<div class="contact">
+  <h2>Contact</h2>
+  <p>phone #: (415)265-7978</p>
+  <p>Email: nikkiylin@gmail.com</p>
+  <p>github: https://github.com/XueYingLin</p>
 
-    </div> <!--close "contact"-->
+</div> <!--close "contact"-->
 
-  </div> <!--close "link-elements" section-->
-</section> <!--close "elements"-->
-
-  <footer>
+<footer>
     <p>Copyright 2020</p>
   </footer>
 </body>
