the desktop version done

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 <div class="contact">
   <h2>Contact</h2>
   <p>phone #: (415)265-7978</p>
-  <p>Email: nikkiylin@gmail.com</p>
-  <p>github: https://github.com/XueYingLin</p>
+  <p>Email: <a href="mailto:nikkiylin@gmail.com">nikkiylin@gmail.com</a></p>
+  <p>github:<a href="https://github.com/XueYingLin">https://github.com/XueYingLin</a></p>
 
 </div> <!--close "contact"-->
 
